syntax="proto3";

package ULZProto;
option csharp_namespace = "ULZAsset.ProtoMod";

import "EventHookPhase.proto";
/**
* this file is as the globe-defined object reference file
* about how or what the sub-service program 
* may defined by the service in
* the service-{sub_prog_name}.proto
**/






// Enum

enum ACType {
  ATK = 0;
  DEF = 1;
  MOV = 2;
  STR = 3;
  GUN = 4;
  NULL = 5;
}


message     ActionCard  {
  string      id          = 1;
  ACType      UpType      = 2;
  sint32      UpValue     = 3;
  ACType      DwType      = 4;
  sint32      DwValue     = 5;
}

message     Status {
  string      id          = 1;
  string      Name        = 2;
  string      Desription  = 3;
  int32       Weight      = 4;
  int32       Count       = 5;
  bytes       TriggerFunc = 6;
  EventHookPhase  EHPhase     = 7;
  EventHookType   EHType      = 8;
}

message     CardCharInt {
  string      CcId        = 1;
  sint32      Hp          = 2;
  sint32      HpInt       = 3;
  sint32      Atk         = 4;
  sint32      AtkInt      = 5;
  sint32      Def         = 6;
  sint32      DefInt      = 7;
  repeated    Status      StatusInt   = 8;
}

message     Player {
  string      id          = 1;
  repeated    CardCharInt     CCSet   = 2;     
  repeated    ActionCard      Deck    = 3;
}

message     Log {
  int64      Timestamp    = 1;
  sint32     LogLevel     = 2;
  string     LogMsg       = 3;
  
}

message     Room {
  string      id          = 1;        
  Player      Host        = 2;
  Player      Dueler      = 3;
  uint32      Turns       = 4;
  Log         logger      = 5;
  sint32      EventCounter =  6;
  EventHookPhase  EventPhase = 7;
  string      FirstPlayer = 8;
  string      SecPlayer = 9;
  string      Winner      = 10;
}

message     DiceResult {
  sint32      ATK = 1;
  sint32      DEF = 2;
}

message     GameSet {
  string      id          = 1;
  Player      Self        = 2;
  Player      Opposite    = 3;
  sint32      EventCounter = 4;
  sint32      Turns       =5;
  sint32      ATKDice     = 6;
  sint32      DEFDice     = 7;
  repeated DiceResult RollResult = 8;
}


message     PlayerInfo {
  string      Id      = 1;
  string      Name    = 2;
  string      Title   = 3;
}